--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
     <meta name="viewport" content="width=device-width, user-scalable=no" />
+<link rel="shortcut icon" href="./resources/icons/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="./resources/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./resources/icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./resources/icons/favicon-16x16.png">
+<link rel="manifest" href="./resources/icons/manifest.json">
+<link rel="mask-icon" href="./resources/icons/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="theme-color" content="#ffffff">
     <title>joojert?</title>
   </head>
 
